Bump version to flyway-9.22.0
Please see the GH release for the release notes